# shake-n-bake

./: .coverage  .gitignore  README.md  base_image_manifest_tools.hcl  merge_n_convert.sh  pyproject.toml  shake_n_bake.sh  shared_functions.hcl  tasks.py
config/: REPOS.env  VERSIONS.env  generate_versions_hcl.sh  user.hcl  versions.hcl
src/shake_n_bake/: __init__.py
src/shake_n_bake/config/: __init__.py  loader.py
src/shake_n_bake/core/: constants.py  exceptions.py  models.py
src/shake_n_bake/docker/: __init__.py  executor.py
stacks/base/: Dockerfile  __REQUIRED_BAKE_FILES.json  base_built_images.hcl  base_built_images.json  docker-bake.hcl  metadata.json  mongod.conf
stacks/devcontainers/: Dockerfile  __REQUIRED_BAKE_FILES.json  devcontainers_built_images.hcl  devcontainers_built_images.json  docker-bake.hcl  post_attach.sh
stacks/devcontainers/huloop-dev-tools/: .bash_aliases
stacks/image_tests/: Dockerfile  __REQUIRED_BAKE_FILES.json  docker-bake.hcl
stacks/image_tests/bats/: huloop_dev_tools.bats  jdk.bats  jre.bats  mongo.bats  node.bats  tomcat.bats  ubuntu.bats
stacks/runners/: Dockerfile  __REQUIRED_BAKE_FILES.json  docker-bake.hcl  metadata.json  runners_built_images.json
stacks/sidecars/: __REQUIRED_BAKE_FILES.json  docker-bake.hcl  metadata.json  sidecars_built_images.json
stacks/sidecars/entra_sso_keystore_builder/: Dockerfile  entrypoint.sh
stacks/utility/uv/: Dockerfile  __REQUIRED_BAKE_FILES.json  docker-bake.hcl  metadata.json  uv_built_images.json
stacks/utility/uv/scripts/: version_bump.py
tests/: __init__.py
tests/unit/: test_config_loader.py  test_core_models.py
