[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shake-n-bake"
version = "0.1.0"
description = "Docker buildx orchestration tools converted from bash to Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.43",
    "invoke>=2.2.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "typer>=0.16.1",
]

[project.scripts]
shake-n-bake = "shake_n_bake.cli:app"
merge-n-convert = "shake_n_bake.cli:merge_convert_app"
generate-versions-hcl = "shake_n_bake.cli:generate_versions_app"

[tool.uv.sources]
shake-n-bake = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.10",
    "types-invoke>=2.0.0.10",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

# Pydantic plugin
plugins = ["pydantic.mypy"]

# Ignore certain files that are harder to type
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
